@@ -2,6 +2,7 @@
 
 #if HAVE_NANOSLEEP && HAVE_TIME_H
 #include <time.h>
+#include <errno.h>
 #elif HAVE_USLEEP && HAVE_UNISTD_H
 #include <unistd.h>
 #elif HAVE_SLEEP && HAVE_WINDOWS_H
@@ -22,27 +23,46 @@ alutSleep (ALfloat duration)
   {
     ALuint seconds = (ALuint) duration;
     ALfloat rest = duration - (ALfloat) seconds;
+
 #if HAVE_NANOSLEEP && HAVE_TIME_H
+
     ALuint microSecs = (ALuint) (rest * 1000000);
-    struct timespec t;
+    struct timespec t, remainingTime;
     t.tv_sec = (time_t) seconds;
     t.tv_nsec = ((long) microSecs) * 1000;
-    nanosleep (&t, NULL);
+
+    /* At least the interaction of nanosleep and signals is specified! */
+    while (nanosleep (&t, &remainingTime) < 0)
+      {
+        if (errno != EINTR)
+          {
+            return AL_FALSE;
+          }
+        /* If we received a signal, let's try again with the remaining time. */
+        t.tv_sec = remainingTime.tv_sec;
+        t.tv_nsec = remainingTime.tv_nsec;
+      }
+
 #elif HAVE_USLEEP && HAVE_UNISTD_H
+
     while (seconds > 0)
       {
         usleep (1000000);
         seconds--;
       }
     usleep ((unsigned int) (rest * 1000000));
+
 #elif HAVE_SLEEP && HAVE_WINDOWS_H
+
     while (seconds > 0)
       {
         Sleep (1000);
         seconds--;
       }
     Sleep ((DWORD) (rest * 1000));
+
 #endif
+
   }
   return AL_TRUE;
 }
